test_suite/tests/ui/identifier/field_struct.stderr
error: #[serde(field_identifier)] can only be used on an enum
 --> tests/ui/identifier/field_struct.rs:5:1
  |
3 | #[derive(Deserialize)]
  |          ----------- in this derive macro expansion
4 | #[serde(field_identifier)]
5 | struct S;
  | ^^^^^^
  |
  = note: this error originates in the derive macro `Deserialize` (in Nightly builds, run with -Z macro-backtrace for more info)
